@@ -7493,6 +7493,7 @@ use feature 'say';
                     our @INIT_BLOCK = ();
                     our @CHECK_BLOCK = ();
                     our @UNITCHECK_BLOCK = ();
+                    our $PROTO = {};
                     sub Perlito5::set_global_phase {
                         my $phase = shift;
                         local ${'@'};
@@ -10848,10 +10849,10 @@ use feature 'say';
                     }
                     if ($arg->isa('Perlito5::AST::Call')) {
                         if ($arg->method() eq 'postcircumfix:<{ }>') {
-                            return '(' . $arg->invocant()->emit_javascript2() . ')._hash_.hasOwnProperty(' . Perlito5::AST::Lookup::->autoquote($arg->{'arguments'})->emit_javascript2($level) . ')'
+                            return Perlito5::Javascript2::emit_javascript2_autovivify($arg->invocant(), $level, 'hash') . '._hash_.hasOwnProperty(' . Perlito5::AST::Lookup::->autoquote($arg->{'arguments'})->emit_javascript2($level) . ')'
                         }
                         if ($arg->method() eq 'postcircumfix:<[ ]>') {
-                            return '(' . $arg->invocant()->emit_javascript2() . ')._array_.hasOwnProperty(' . $arg->{'arguments'}->emit_javascript2($level) . ')'
+                            return Perlito5::Javascript2::emit_javascript2_autovivify($arg->invocant(), $level, 'array') . '._array_.hasOwnProperty(' . $arg->{'arguments'}->emit_javascript2($level) . ')'
                         }
                     }
                     if ($arg->isa('Perlito5::AST::Var') && $arg->sigil() eq '&') {
